# cucumber

./: .gitmodules  Cargo.toml  LICENSE
.cargo/: config.toml
.github/workflows/: build.yml  check.yml  release.yml
assets/: bullet_shells.ron  clouds.aseprite  space.aseprite
assets/audio/music/: robbery_base.wav.asd  robbery_drums.wav.asd  robbery_lead.wav.asd  somber_base.wav.asd  somber_combat.wav.asd  something_imminent.wav.asd  something_imminent_arp.wav.asd
assets/particles/: bullet_shells.ron  embers.ron  fire.ron  rocket.ron  ship_fire.ron
assets/shaders/: fire.wgsl  lightning.wgsl  mandelbrot.wgsl  scrolling_texture.wgsl
assets/shooters/: SpaceShooterAssetPack_Weapons.aseprite
physics/: Cargo.toml
physics/src/: collision.rs  debug.rs  layers.rs  lib.rs  spatial.rs  trigger.rs
src/: animation.rs  assets.rs  asteroids.rs  auto_collider.rs  background.rs  bomb.rs  bounds.rs  bullet.rs  characters.rs  color.rs  end.rs  enemy.rs  fire.rs  health.rs  input.rs  invaders.rs  main.rs  mandelbrot.rs  miniboss.rs  minions.rs  movement.rs  music.rs  opening.rs  particles.rs  pickups.rs  player.rs  points.rs  sampler.rs  selection.rs  sprites.rs  stats.rs  text.rs  textbox.rs  tween.rs  ui.rs
src/boss/: gradius.rs  mod.rs
src/boss/gradius/: emitters.rs  mod.rs
src/bullet/: emitter.rs  homing.rs  mod.rs  player.rs
src/bullet/emitter/: arcs.rs
src/effects/: mod.rs
src/enemy/: arcs.rs  buckshot.rs  crisscross.rs  formation.rs  minethrower.rs  mod.rs  movement.rs  scout.rs  swarm.rs  timeline.rs  verger.rs  waller.rs
