[package]
name = "cucumber"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.3", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "webgl2",
    "x11",
] }
bevy_enhanced_input = "0.9"
bevy_textbox = { path = "bevy_textbox" }
bevy_pixel_gfx = { path = "bevy_pixel_gfx" }
bevy_pretty_text = { path = "bevy_pretty_text" }
bevy_sequence = { path = "bevy_sequence" }
physics = { path = "physics" }
bevy_tween = "0.7"
bevy_seedling = { path = "bevy_seedling" }
rand = "0.9.1"

[patch."https://github.com/CorvusPrudens/bevy_sequence.git"]
bevy_sequence = { path = "bevy_sequence" }

[patch."https://github.com/void-scape/bevy_pretty_text.git"]
bevy_pretty_text = { path = "bevy_pretty_text" }

[features]
default = ["bevy/dynamic_linking"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 0
debug = "none"
strip = "debuginfo"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
